# fastapi-init

./: .env  .env.pre  .env.production  .env.test  AGENTS.md  README.md  app_db.sql  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 8f313665b3f6_add_userindex_remove_fk.py  c53d8f9b9272_add_article_soft_delete.py  f8d632f9ce2d_add_user_soft_delete.py
cache/: __init__.py  base_cache.py
config/: __init__.py  cache_config.py  db_conf.py  jwt_config.py
crud/: __init__.py  article.py  user.py
migrations/: 001_add_user_id_to_article.sql  002_add_index_article_user_id.sql  003_remove_fk_add_soft_delete.sql  004_article_soft_delete.sql
models/: __init__.py  article.py  base.py  user.py
routers/: __init__.py  article.py  health.py  user.py
schemas/: __init__.py  article.py  user.py
utils/: __init__.py  auth.py  enums.py  exception.py  exception_handlers.py  permissions.py  response.py  security.py
