[project]
name = "fastapi-init"
version = "0.1.0"
description = "FastAPI scaffold project"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiomysql>=0.3.2",
    "alembic>=1.18.5",
    "bcrypt<4.1.0",
    "fastapi[standard]>=0.129.2",
    "jwt>=1.4.0",
    "passlib[bcrypt]>=1.7.4",
    "pyjwt>=2.12.1",
    "redis>=7.3.0",
    "sqlalchemy[asyncio]>=2.0.46",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
